fix: 修复JSON序列化死循环调用